--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="topnav">
         <h1>Studio Ghibli Films</h1>
         <button class="newbutton">Listmovies</button>
-        <button class="newbutton">return</button>
+        <button class="returnButton">return</button>
     </div>
     
 
